feat(auth): 完善 refresh token 刷新与退出登录流程
- 使用 Redis 保存 refresh token 哈希并配置过期时间
- 新增 token 刷新与退出登录接口
- 通过原子消费实现 refresh token 单次使用和轮换
- 引入 tokenVersion 缓存，使退出后的 access token 失效
- 补充 Redis 基础设施、认证错误码和相关配置
- 清理仓库中误提交的 target 构建产物